--- a/index.html
+++ b/index.html
@@ -11,43 +11,45 @@
     <h1>Jogo da Velha</h1>
 
     <div>
-        <div id="1" class = "quadrado">-</div>
-        <div id="2" class = "quadrado">-</div>
-        <div id="3" class = "quadrado">-</div>
+        <div id="1" class = "square" onclick="choiceSquare(this.id)">-</div>
+        <div id="2" class = "square" onclick="choiceSquare(this.id)">-</div>
+        <div id="3" class = "square" onclick="choiceSquare(this.id)">-</div>
     </div>
     <div>
-        <div id="4" class = "quadrado">-</div>
-        <div id="5" class = "quadrado">-</div>
-        <div id="6" class = "quadrado">-</div>
+        <div id="4" class = "square" onclick="choiceSquare(this.id)">-</div>
+        <div id="5" class = "square" onclick="choiceSquare(this.id)">-</div>
+        <div id="6" class = "square" onclick="choiceSquare(this.id)">-</div>
     </div>
     <div>
-        <div id="7" class = "quadrado">-</div>
-        <div id="8" class = "quadrado">-</div>
-        <div id="9" class = "quadrado">-</div>
+        <div id="7" class = "square" onclick="choiceSquare(this.id)">-</div>
+        <div id="8" class = "square" onclick="choiceSquare(this.id)">-</div>
+        <div id="9" class = "square" onclick="choiceSquare(this.id)">-</div>
     </div>
 
     <div class="jogador">
         <label>
             Jogador:
         </label>
-        <label id ="jogador-selecionado">
+        <label id ="selected-player">
             
         </label>
 
     </div>
-    <div class="vencedor">
+    <div class="winner">
         <label>
             Vencedor:
         </label>
-        <label id ="Vencedor-selecionado">
+        <label id ="selected-winner">
 
         </label>
 
     </div>
 
     <div>
-        <button>Reiniciar</button>
+        <button onclick ="reset()">
+            Reiniciar
+        </button>
     </div>
-    
+    <script src="script.js"></script>
 </body>
 </html>
